<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#0e0e0e"
    tools:context="com.example.cristian.calculadora.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        >
        <TextView
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtnumero"
            android:textColor="#021b54"
            android:textSize="50sp"
            android:gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/siete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:layout_weight="0.25"
                android:onClick="onClicksiete"
                android:text="@string/siete"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/ocho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:layout_weight="0.25"
                android:onClick="onClickocho"
                android:text="@string/ocho"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/nueve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:layout_weight="0.25"
                android:onClick="onClicknueve"
                android:text="@string/nueve"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/sumar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClicksumar"
                android:text="@string/mas"
                android:textSize="50sp"
                android:background="@drawable/boton_mas"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/cuatro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickcuatro"
                android:text="@string/cuatro"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/cinco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickcinco"
                android:text="@string/cinco"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/seis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickseis"
                android:text="@string/seis"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/restar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:layout_weight="0.25"
                android:onClick="onClickrestar"
                android:background="@drawable/boton_menos"
                android:text="@string/menos"
                android:textSize="50sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/uno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickuno"
                android:text="@string/uno"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/dos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickdos"
                android:text="@string/dos"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/tres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:onClick="onClicktres"
                android:text="@string/tres"
                android:textSize="50sp"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/multiplicar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickmultiplicar"
                android:text="@string/multiplicar"
                android:textSize="50sp"
                android:background="@drawable/boton_por"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/borrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickborrar"
                android:text="@string/borrar"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/cero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickcero"
                android:text="@string/cero"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/punto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickpunto"
                android:text="@string/punto"
                android:textSize="50sp"
                android:background="@drawable/boton_numero"
                />
            <Button
                android:id="@+id/division"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickdividir"
                android:text="@string/dividir"
                android:textSize="50sp"
                android:background="@drawable/boton_div"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/igual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:onClick="onClickigual"
                android:text="@string/igual"
                android:textSize="50sp"
                android:background="@drawable/boton_redondo"
                />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
